...
                                      ),
                                    )
                                  : const Row(
                                      mainAxisAlignment:
                                          MainAxisAlignment.spaceBetween,
                                      children: [
                                        Text('Entrar no Rádio PX'),
                                        Icon(
                                          Icons.arrow_forward,
                                          color: AppTheme.azulPrimario,
                                          size: 20,
                                        ),
                                      ],
...
